--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,7 @@ a {text-decoration: none !important;}
   font-size: large;
   letter-spacing: 2px;
   padding: 6px;
-  margin-top: 400px;
-  margin-right: 10px;
+  margin-top: 380px;  
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
@@ -105,14 +104,25 @@ a {text-decoration: none !important;}
   padding-right: 20px;
 }
 
-/* Navigation bar */
-.customnav {
-  
+
+/* Class for inter-section separator */
+.separator {
+  position: absolute;
+  top: 517px;
+  left: 0px;
+  z-index: -1 !important;
+  padding: 0px;
 }
 
+.separator2 {
+  position: absolute;
+  top: 1760px;
+  left: 0px;
+  z-index: -1 !important;
+  padding: 0px;
+}
 
-#about, #team,
-#portfolio, #blog, #faq, #testimonial, #contact {
+#about, #team, #portfolio, #blog, #faq, #testimonial, #contact {
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -120,6 +130,16 @@ a {text-decoration: none !important;}
 #service {
   padding-top: 20px;
   padding-bottom: 60px;
+}
+
+#identity, #values {
+  padding-top: 150px;
+  padding-bottom: 80px;
+}
+
+#values {
+  padding-top: 70px;
+  padding-bottom: 80px;
 }
 
 #about, #portfolio, #faq, #contact {
@@ -183,11 +203,17 @@ a {text-decoration: none !important;}
 
 /* navigation styles
  ========================================== */
-.navbar-default {
-  background: #ffffff;
+
+
+
+ .navbar-default {
+  position: static !important;
+  background: hsl(0, 0%, 100%);
   border: none;
+  width: 80% !important;  
   box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.04);
-  margin: 0 !important;
+  padding-left: 30px;
+  z-index: 2 !important;
   }
 
 .navbar-default .navbar-brand {
@@ -203,7 +229,7 @@ a {text-decoration: none !important;}
 }
 
 .navbar-nav {
-  display: flex;
+   display: flex;
    justify-content: center;
    align-items: center;
 }
@@ -256,7 +282,7 @@ a {text-decoration: none !important;}
 #home {
 
   /* This instruction has not effect, because the background image is setting by other code swapping one or more images. */
-  background: url('../images/home.png') 50% 0 repeat-y fixed; 
+  background: url('../images/home.png') 50% 0 repeat-y ; 
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
@@ -271,11 +297,11 @@ a {text-decoration: none !important;}
           align-items: center;
   height: 100vh;
   text-align: left;
+  z-index: -99 !important;
 }
 
 #home .btn {
-  margin-right: 60px;
-  
+  margin-right: 60px;  
 }
 
 
