--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ body {
 html,body {
      width: 100%;
      overflow-x: hidden;
-		 margin: 0;
+     margin: 0;
+     scroll-behavior: smooth;
 
   }
 
