--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,32 @@ a {text-decoration: none !important;}
 
 /* home section styles
 /* ========================================== */
+#home2 {
+
+  /* This instruction has not effect, because the background image is setting by other code swapping one or more images.*/
+  background: url('../images/contact.jpg'); 
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-position: center center;
+  color: #ffffff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+  text-align: center;
+}
+
+#home .btn {
+  margin-right: 12px;
+}
+
+
+
 #home {
 
   /* This instruction has not effect, because the background image is setting by other code swapping one or more images. */
