--- a/css/style.css
+++ b/css/style.css
@@ -118,21 +118,7 @@ a {text-decoration: none !important;}
 
 /* home section styles
 /* ========================================== */
-#home2 {
 
-  /* This instruction has not effect, because the background image is setting by other code swapping one or more images.*/
-  background: url('../images/contact_footer.jpg'); 
-  -webkit-background-size: cover;
-  background-size: cover;
-  background-position: center center;
-  color: #ffffff;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  height: 120vh;
-  text-align: center;
-}
 
 #home .btn {
   margin-right: 12px;
@@ -159,6 +145,7 @@ a {text-decoration: none !important;}
   text-align: left;
   height: 400px;
   z-index: -1 !important;
+  margin-top: 10px;
 }
 
 #home .btn {
@@ -194,6 +181,13 @@ a {text-decoration: none !important;}
 .customers-title {
   padding-top: 40px;
   padding-bottom: 30px;
+}
+
+.customer {
+  padding: 0px;
+  border-color: black;
+  border-width: 1px;
+  border-style: solid;
 }
 
 
@@ -261,11 +255,9 @@ a {text-decoration: none !important;}
  .navbar-default {
   position: static !important;
   background: hsl(0, 0%, 100%);
-  border: none;
-  width: 80% !important;  
-  box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.04);
-  padding-left: 30px;
-  z-index: 2 !important;
+  border: none;  
+  box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.44);
+  padding-right: 40px;
   }
 
 .navbar-default .navbar-brand {
@@ -713,8 +705,78 @@ padding-right: 1.1rem;
 
 /* contact section styles
 /* ========================================== */
+#contact {  
+  background: url('../images/contact_footer.jpg'); 
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-position: center center;
+  color: #ffffff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 120vh;
+  text-align: center;
+  margin-top: 10px;
+}
+
+#contact form {
+  
+}
+
+input {
+  border-style: solid;
+  border-width: 1px;
+  border-color: white;
+  background: transparent;
+  padding: 10px;
+  margin-top: 20px;
+  width: 60%;
+  font-size: large;
+}
 
 
+textarea {
+  border-style: solid;
+  border-width: 1px;
+  border-color: white;
+  background: transparent;
+  padding: 10px;
+  margin-top: 20px;
+  width: 60%;
+  font-size: large;
+  resize: none;
+}
+
+.contact-submit {  
+  background: transparent;
+  border-right: 2px solid #ffffff;
+  border-bottom: 2px solid #ffffff;
+  border-left: none;
+  border-top: none;
+  border-radius: 0px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: x-large;
+  letter-spacing: 1px;
+  padding: 6px;     
+  transition: all 0.4s ease-in-out;
+}
+
+
+.contact-submit:hover {
+  background:rgba(255, 255, 255, 0.9);
+  
+  
+  color: #0e80b4;
+}
+
+
+
+::placeholder {
+   font-size: large;
+   color: white; 
+}
 
 
 
