--- a/css/style.css
+++ b/css/style.css
@@ -463,243 +463,42 @@ padding-right: 1.1rem;
 
 
 
-
-
-/* blog section styles
+/* Indicadores section styles
 /* ========================================== */
-#blog .blog-wrapper {
-  border: 1px solid #f0f0f0;
-  border-radius: 6px;
-  padding: 60px;
-  margin-bottom: 22px;
-   -wekbit-transition: all 1000ms linear;
-  -moz-transition: all 1000ms linear;
-  transition: all 1000ms linear;
-}
-
-#blog h3 a {
-  color: #606060;
-}
-
-#blog .blog-wrapper:hover {
-  background: url('../images/blog-wrapper.jpg');
+#indicadores {    
+  background: url('../images/indicadores.jpg'); 
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
   color: #ffffff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 70vh;
+  text-align: center;
+  margin-top: 10px;  
+  z-index: -1;
 }
 
-#blog .blog-wrapper:hover h3 a {color: #63c6ae;}
-
-#blog .blog-date {color: #909090;}
-
-#blog #blog-author {
-  color: #606060;
-  letter-spacing: 1px;
+.indicadores-title {
+  font-weight: 900;
+  text-align: center;
+  width: 100em;
+  margin-top: 18%;
+  color: rgba(2, 38, 59, 0.89);
 }
 
-/* blog single page */
-#blog .blog-about {padding-bottom: 4px;}
-#blog .blog-about img {padding-bottom: 18px;}
-#blog .blog-about h3 {
-  margin-top: 0px;
+.indicadores-container {
+  margin-top: 10px;
+  padding: 20px;
+}
+
+/* Bank and dian section styles
+/* ========================================== */
+#dian {  
+  padding-top: 10px;
   padding-bottom: 10px;
-}
-
-#blog .recent-post h3 {
-  padding-bottom: 8px;
-}
-
-#blog .recent-post .media {
-  border-bottom: 1px solid #f0f0f0;
-  padding-bottom: 18px;
-  margin-bottom: 22px;
-}
-#blog .recent-post .media:last-child {
-  border-bottom: none;
-}
-
-#blog .blog-categories {
-  padding-top: 12px;
-}
-#blog .blog-categories h3 {
-  padding-bottom: 12px;
-}
-
-#blog .blog-categories li {
-  padding-top: 4px;
-  padding-bottom: 4px;
-  margin-left: 10px;
-}
-
-#blog .blog-categories li a {
-  color: #808080;
-  letter-spacing: 0.5px;
-}
-
-#blog h4 {
-  font-size: 17px;
-  line-height: 22px;
-  padding-top: 0px;
-}
-
-#blog h4 a {
-  color: #404040;
-  transition: all 0.4s ease-in-out;
-}
-#blog h4 a:hover {
-  color: #75d1e0;
-}
-
-#blog h5 {
-  color: #727272;
-}
-
-#blog .blog-image {
-  padding-bottom: 30px;
-}
-
-#blog .blog-content h3 {
-  margin-top: 8px;
-  padding-bottom: 12px;
-}
-
-#blog .blog-content span a {
-  color: #909090;
-  letter-spacing: 0.9px;
-}
-
-#blog .blog-content span {
-  font-size: 14px;
-  font-weight: 400;
-  margin-right: 14px;
-}
-
-#blog .blog-content blockquote {
-  border-left-color: #75d1e0;
-  margin: 30px 0px;
-}
-
-#blog .blog-author {
-  border-top: 1px solid #f0f0f0;
-  border-bottom: 1px solid #f0f0f0;
-  padding-top: 22px;
-  padding-bottom: 28px;
-  margin-top: 42px;
-  margin-bottom: 42px;
-}
-#blog .blog-author h4 {
-  padding-top: 12px;
-  padding-bottom: 8px;
-}
-
-#blog .recent-post .media .media-object,
-#blog .blog-author .media .media-object, #blog .blog-comment .media .media-object {
-  margin-right: 14px;
-}
-
-#blog .blog-comment h3, #blog .blog-comment-form h3 {
-  padding-bottom: 18px;
-}
-
-#blog .blog-comment .media .media {
-  border-top: 1px solid #f0f0f0;
-  padding-top: 20px;
-  margin-top: 32px;
-}
-
-#blog .blog-comment-form {
-  border-top: 1px solid #f0f0f0;
-  padding-top: 32px;
-  margin-top: 72px;
-}
-
-#blog .blog-comment-form .col-md-6,
-#blog .blog-comment-form .col-md-12, #blog .blog-comment-form .col-md-3 {
-  padding-left: 0px;
-}
-
-#blog .blog-comment-form .form-control {
-  background: transparent;
-  border: 2px solid #eeeeee;
-  color: #808080;
-  box-shadow: none;
-  margin-top: 18px;
-  margin-bottom: 10px;
-  transition: all 0.4s ease-in-out;
-}
-
-#blog .blog-comment-form .form-control:focus {
-  border-color: #808080;
-}
-
-#blog .blog-comment-form input {
-  height: 45px;
-}
-
-#blog .blog-comment-form input[type="submit"] {
-  background: #eeeeee;
-  color: #202020;
-}
-
-
-/* faq section styles
-/* ========================================== */
-#faq .panel-group .panel {
-  margin-bottom: 8px;
-}
-
-#faq .panel-default {
-  border: none;
-}
-
-#faq .panel-default>.panel-heading {
-  background: transparent;
-  color: #505050;
-}
-
-#faq .panel-heading {
-  border: none;
-  padding-top: 4px;
-  padding-bottom: 14px;
-}
-
-#faq .panel-title > a {
-  font-size: 21px;
-  display: block;
-  width: 100%;
-  padding: 10px 15px;
-}
-
-#faq .panel-default>.panel-heading+.panel-collapse>.panel-body {
-  border-top: none;
-  padding-top: 12px;
-  padding-left: 32px;
-  padding-bottom: 22px;
-}
-
-
-/* testimonial section styles
-/* ========================================== */
-#testimonial .col-md-6 {
-  display: block;
-  width: 100%;
-  padding-bottom: 42px;
-}
-
-#testimonial h4 {letter-spacing: 1px;}
-
-#testimonial .media .media-object {
-  padding-right: 22px;
-}
-
-#testimonial .media .media-object img {
-  width: 80px;
-  height: 80px;
-}
-
-#testimonial .media .media-body {
-  padding-top: 12px;
 }
 
 
@@ -717,7 +516,6 @@ padding-right: 1.1rem;
   display: flex;
   height: 120vh;
   text-align: center;
-  margin-top: 10px;
   z-index: -1;
 }
 
