Resp navbar implemented!!

--- a/css/backup-css.css
+++ b/css/backup-css.css
@@ -252,7 +252,7 @@ body {
   
   
   /* navigation styles
-  ========================================== 
+  ========================================== */
   
   .navbar-default {
   position: static !important;
@@ -322,7 +322,7 @@ body {
   background-color: transparent;
   }
   
-  */
+  
   
   .navbar-brand,
   .toggle-button,
