--- a/css/style-resp.css
+++ b/css/style-resp.css
@@ -127,10 +127,10 @@
   @media screen and (max-width: 768px){
 
     .after-nav-margin {
-      margin-top: 100px;
+      margin-top: 130px;
     }
 
-    .valores {
+    .only-desktop {
       display: none;
     }
 
@@ -153,10 +153,10 @@
     
 
     .after-nav-margin {
-      margin-top: 150px;
+      margin-top: 200px;
     }
 
-    .valores-divided{
+    .only-mobile{
       display: none;
     }
 
